--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,73 @@
 }
 
 #dashboard-title {
+  text-align: center;
+}
+
+.list-group {
+  width: 15%;
+}
+
+#dashboard-summary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+#roTitle {
+  text-align: center;
+}
+
+#roButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#addRoButton {
+margin-right: 5px;
+}
+
+#editRoButton {
+  margin-left: 5px;
+}
+
+#roSection {
+  margin-top: 15px;
+  margin-left: 25px;
+  background: #e9ecef;
+  padding-top: 15px;  
+  padding-bottom: 15px;
+  width: 25%;
+  border-radius: 20px;
+}
+
+
+
+#roCountTitle {
+  margin-bottom: 2px;
+}
+
+#roList {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0px;
+}
+#totalRoCount {
   border: 1px solid black;
-  
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  border-radius: 20px;  
+  background-color: #6c757d;
+  color: white;
+}
+
+#roDefaultText {
+margin-top: 10px;
+text-align: center;
 }
