--- a/src/App.css
+++ b/src/App.css
@@ -120,35 +120,36 @@ margin-right: 5px;
   margin-bottom: 2px;
 }
 
-/* #roList {
+#roList {
   display: flex;
   flex-direction: column;
   padding-left: 0px;
   margin-top: 15px;
   margin-left: 25px;
-} */
+}
 
+
+.alert {
+  position: absolute;
+  top: -35px;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
 .roList {
   list-style: none;
   width: 25%;
   height: 10%;
-  text-align: center;
+  text-align: left;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-/* .roList:first-child:hover::after {
-  content: attr(title);
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 5px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  z-index: 1;
-} */
+
+#totalRo {
+  margin-left: 15px;
+}
 
 
 
@@ -166,44 +167,4 @@ margin-right: 5px;
   padding: 5px;
   background-color: #f0f0f0;
   border: 1px solid #ccc;
-}
-#totalRoCount {
-  
-  width: 20%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  border-radius: 20px;  
-  background-color: #6c757d;
-  color: white;
-}
-
-#hoursPerRo {
- 
-  width: 20%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  border-radius: 20px;
-  background-color: #6c757d;
-  color: white;
-}
-
-#hoursPerRoTitle {
-  margin-bottom: 2px
-}
-
-#roDefaultText {
-margin-top: 10px;
-text-align: center;
-}
-
-#roStatistics {
-  display: flex;
-  flex-direction: row;
-  margin-top: 20px;
 }
